--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -109,7 +109,7 @@
         <div class="Entrada">
             <label for="Peso">Peso:</label>
             <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-             @bind-Value="emergencia.Peso" name="Peso"/>
+            @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
@@ -228,14 +228,20 @@
 
     public void Guardar()
     {
-        if(emergenciaBll.Guardar(this.emergencia))
+        if(Validar())
         {
-            Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
-            this.Nuevo();
-            ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
+            if(emergenciaBll.Guardar(this.emergencia))
+                {
+                    Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
+                    this.Nuevo();
+                    ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
+                }
+                //(Paciente.Buscar(PacienteID)).DetalleNoAseguradas.Add(new EmergenciaDetalle(PacienteID, this.emergencia.OrdenID));
         }
-        //(Paciente.Buscar(PacienteID)).DetalleNoAseguradas.Add(new EmergenciaDetalle(PacienteID, this.emergencia.OrdenID));
-
+            else
+            {
+                ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Error, Summary = "Error de Registro", Detail = "Campos Vacios o mal asignados", Duration = 4000 });
+            }
     }
 
 
@@ -256,5 +262,16 @@
         }
     }
 
-
+        public bool Validar()
+        {
+            if(this.emergencia.PacienteID !=null && this.emergencia.M_Consulta !=null && this.emergencia.AtencionesPrevias !=null && this.emergencia.Peso!=null &&this.emergencia.TA !=null && this.emergencia.FC !=null && this.emergencia.FR !=null && this.emergencia.Temperatura !=null &&  this.emergencia.Diagnostico !=null &&  this.emergencia.Fecha !=null )
+            {
+                System.Console.WriteLine("Pase 1");
+                    return true;
+            }
+            else
+            {
+                return false;
+            }
+        }
 }
