--- a/Pages/Farmacia/RegistrarArticulo.razor
+++ b/Pages/Farmacia/RegistrarArticulo.razor
@@ -58,13 +58,13 @@
         <label for="Descripcion">Descripcion:</label>
         <RadzenTextBox  name="Descripcion" @bind-Value="articulo.Descripcion"/>
     </div>
-        <div class="Entrada">
+    <div class="Entrada">
         <label for="Costo">Costo:</label>
         <RadzenNumeric  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"  name="Costo" @bind-Value="articulo.Costo"/>
     </div>
-        <div class="Entrada">
-        <label for="Precio">Precio:</label>
-        <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"  name="Precio " @bind-Value="articulo.Precio"/>
+    <div class="Entrada">
+        <label for="Descripcion">Descripcion:</label>
+        <RadzenTextBox  name="Descripcion" @bind-Value="articulo.Descripcion"/>
     </div>
 
     <center>
