--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -93,7 +93,7 @@
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <RadzenTextBox type="A_Previas" id="A_Previas" name="A_Previas"/>
+            <RadzenTextBox @bind-value="emergencia.AtencionesPrevias"type="A_Previas" id="A_Previas" name="A_Previas"/>
         </div>
 
         <div class="Entrada">
