--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -64,8 +64,8 @@
                     </RadzenPanelMenuItem>
 
                     <RadzenPanelMenuItem style="background-color:#28363c;" Text="Suplidores" >
-                        <RadzenPanelMenuItem  Text="Consultar" Path="" />
-                        <RadzenPanelMenuItem  Text="Agregar " Path="" />
+                        <RadzenPanelMenuItem  Text="Consultar" Path="C_Suplidor" />
+                        <RadzenPanelMenuItem  Text="Agregar " Path="R_Suplidores" />
                         <RadzenPanelMenuItem  Text="Reporte" Path="" />
                     </RadzenPanelMenuItem>
 
