--- a/Pages/Farmacia/RegistrarArticulo.razor
+++ b/Pages/Farmacia/RegistrarArticulo.razor
@@ -2,6 +2,7 @@
 
 @inject NotificationService notificationService
 @inject ArticuloBLL ArticuloBLL
+@inject SuplidorBLL suplidores
 
 
 <head>
@@ -62,10 +63,15 @@
         <label for="Costo">Costo:</label>
         <RadzenNumeric  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"  name="Costo" @bind-Value="articulo.Costo"/>
     </div>
-    <div class="Entrada">
-        <label for="Descripcion">Descripcion:</label>
-        <RadzenTextBox  name="Descripcion" @bind-Value="articulo.Descripcion"/>
-    </div>
+    <div class="col-4">
+                        
+                        <RadzenDropDown  AllowClear="true" TValue="int"
+                            FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
+                            class="w-100" Placeholder="Suplidor"  Data="suplidores.GetList()" TextProperty="Nombre"
+                            @bind-value=@articulo.SuplidorId ValueProperty="SuplidorID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            />
+                            
+                    </div>
 
     <center>
         <button type="button" class="btn btn-primary"
