--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,11 +1,34 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<PageTitle>Home</PageTitle>
 
 
+<head>
+    <style>
+        body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
+
+        h1 {
+            color:#121420;
+            text-align:center;
+        }
+
+        p {
+            color:#121420;
+            text-align:center;
+        }
+    </style>
+</head>
+
+<body>
+
+    
+
+    
+    <p ><em>Still developing.....</em></p>
+
+</body>
